2002-05-06  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* app/sheets_dialog.c: Mass removal of //-style comments.  The
	Irix compiler doesn't like them:(  I do...

2002-05-06  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_libart.c (draw_string): Bail out when no GDK font is
	found.
	(set_font): Give error when font not found.
	(set_fillstyle): Intlized error msg.

	* app/pagesetup.c (pagesetup_ok, pagesetup_apply): Sets diagram
	modified when applied (and ok only does apply if apply is set
	sensitive).  Fixes bug #75623.

2002-05-06  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-05-05  Steffen Macke <sdteffen@web.de>

	* app/Makefile.am: added $(UNICODE_CFLAGS)
	
2002-05-02  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/commands.c (help_manual_callback): Check return value of
	opendir.

	* plug-ins/xfig/Makefile.am (INCLUDES): Added DEBUG_FLAGS

	* plug-ins/xfig/xfig-import.c: Fixed misspelled Poly_L_ine, added
	checks for errors.

2002-04-30  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_gdk.c (draw_string): Extra free killed.  Thanks valgrind!

	* objects/UML/uml.c (uml_operation_read): Fix of UML default
	inheritance. 

2002-04-30  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* app/filedlg.c (file_save_as_callback, file_save_as_ok_callback):
	Added button to toggle diagram compression.

2002-04-29  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* lib/font.c: Support for loading extra kerning files, plus got
	rid of rounding errors.  Bounding box mostly perfect for freetype
	fonts.
	(font_string_width): Fudge factor to get around nonlinearity of
	font scaling.

2002-04-29  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/font.c (font_string_width): YA font calculation scheme, with
	comments.

	* objects/UML/class.c (umlclass_calculate_data): Uses the same
	font for drawing and calculating now.
